kubernetes/resources/homelab-demo/base/middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-app-headers
  namespace: homelab-demo
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    customResponseHeaders:
      Access-Control-Allow-Origin: "https://chammanganti.dev"
      Access-Control-Allow-Methods: "GET,OPTIONS"
      Access-Control-Allow-Headers: "Content-Type"
