kubernetes/resources/homelab-demo/base/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-app-redirect-https
  namespace: homelab-demo
spec:
  redirectScheme:
    scheme: https
    permanent: true
