kubernetes/resources/homelab-demo/base/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-app-strip-prefix
  namespace: homelab-demo
spec:
  stripPrefix:
    prefixes:
      - /demo-app
