kubernetes/resources/homelab-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: homelab-demo
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8080
