kubernetes/resources/homelab-demo/base/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-app-http
  namespace: homelab-demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hld.chammanganti.dev`) && PathPrefix(`/demo-app`)
      kind: Rule
      middlewares:
        - name: demo-app-redirect-https
      services:
        - name: demo-app
          port: 80
