kubernetes/resources/homelab-demo/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-app
  namespace: homelab-demo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hld.chammanganti.dev`) && PathPrefix(`/demo-app`)
      kind: Rule
      services:
        - name: demo-app
          port: 80
      middlewares:
        - name: demo-app-headers
        - name: demo-app-strip-prefix
  tls:
    secretName: hld-tls
